# homework31

./: pyproject.toml  pytest.ini
ads/: models.py  permission.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_location_alter_ad_options_alter_category_options_and_more.py  0003_delete_location.py  0004_ad_category_alter_ad_author.py  0005_remove_ad_address.py  0006_alter_ad_name.py  0007_alter_ad_name.py  0008_selection.py
bulletin_board/: settings.py  urls.py
db_init/: apps.py  urls.py  views.py
tests/: factories.py  fixtures.py
tests/ads/: ads_create_test.py  ads_list_test.py  ads_retrieve_test.py  selection_create_test.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_alter_user_managers_user_date_joined_user_email_and_more.py
